--- a/coworkrSearch.html
+++ b/coworkrSearch.html
@@ -25,11 +25,12 @@
         <form id="searchForm">
             <label for="searchBy">Search By:</label>
             <select id="searchBy">
+                <option value=""></option>
               <option value="address">Address</option>
               <option value="neighborhood">Neighborhood</option>
               <option value="individuals">Individuals Allowed</option>
-              <option value="area">Area (sq. feet)</option>
-              <option value="availability">Availability Date</option>
+              <option value="squareFeet">Area (sq. feet)</option>
+              <option value="availabilityDate">Availability Date</option>
               <option value="leaseTerm">Lease Term</option>
               <option value="price">Price</option>
             </select>
@@ -42,7 +43,7 @@
             <label for="sortBy">Sort By:</label>
             <select id="sortBy">
               
-              <option value="individuals">Individuals Allowed</option>
+             
               <option value="area">Area (sq. feet)</option>
               <option value="availability">Availability Date</option>
               <option value="leaseTerm">Lease Term</option>
